@startuml

title __UTIL's Class Diagram__\n

  namespace com.client.util {
    class com.client.util.ImageUtil {
        {static} + decodedImage : Image
        {static} + height : double
        {static} + width : double
        + ImageUtil()
        {static} + imageDecode()
        {static} + imageEncode()
        {static} - scale()
    }
  }
  

  namespace com.client.util {
    class com.client.util.ResizeHelper {
        {static} + addListenerDeeply()
        {static} + addResizeListener()
    }
  }
  

  namespace com.client.util {
    class com.client.util.ResizeHelper.ResizeListener {
        - border : int
        - cursorEvent : Cursor
        - stage : Stage
        - startX : double
        - startY : double
        + ResizeListener()
        + handle()
    }
  }
  

  namespace com.client.util {
    class com.client.util.VoicePlayback {
        {static} + playAudio()
    }
  }
  

  namespace com.client.util {
    class com.client.util.VoiceRecorder {
        {static} + captureAudio()
    }
  }
  

  namespace com.client.util {
    class com.client.util.VoiceUtil {
        {static} # isRecording : boolean
        {static} ~ out : ByteArrayOutputStream
        {static} + isRecording()
        {static} + setRecording()
        {static} ~ getAudioFormat()
    }
  }
  

  com.client.util.ResizeHelper +-down- com.client.util.ResizeHelper.ResizeListener
  com.client.util.ResizeHelper.ResizeListener .up.|> javafx.event.EventHandler
  com.client.util.VoicePlayback -up-|> com.client.util.VoiceUtil
  com.client.util.VoiceRecorder -up-|> com.client.util.VoiceUtil


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
